# hatch-agent

./: LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: lint.yml  release.yml  test.yml
src/hatch_agent/: __init__.py  cli.py  config.py  hooks.py  plugin.py
src/hatch_agent/agent/: __init__.py  core.py  llm.py  multi_agent.py  prompts.py  tools.py
src/hatch_agent/analyzers/: __init__.py  build.py  config.py  dependencies.py  dependency.py  doctor.py  fix.py  migrate.py  project.py  security.py  sync.py  updater.py
src/hatch_agent/commands/: __init__.py  add_dependency.py  chat.py  config.py  doctor.py  explain.py  fix.py  migrate.py  multi_task.py  security.py  sync.py  task.py  update_dependency.py
src/hatch_agent/generators/: __init__.py  environment.py  lockfile.py
tests/: conftest.py  test_config.py  test_hooks.py  test_init.py  test_integration.py  test_plugin.py
tests/agent/: __init__.py  test_core.py  test_llm.py  test_llm_providers.py  test_multi_agent.py  test_multi_agent_system.py  test_prompts.py  test_tools.py
tests/analyzers/: __init__.py  test_build.py  test_config.py  test_dependencies.py  test_dependency.py  test_project.py  test_sync.py  test_updater.py
tests/commands/: __init__.py  test_add_dependency.py  test_chat.py  test_config.py  test_doctor.py  test_explain.py  test_fix.py  test_migrate.py  test_multi_task.py  test_security.py  test_sync.py  test_task.py  test_update_dependency.py
tests/generators/: __init__.py  test_environment.py  test_lockfile.py
