[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "hatch-agent"
version = "0.0.1"
description = "A small scaffold for a Hatch plugin that provides an intelligent agent."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["hatch", "plugin", "agent", "llm", "automation"]
authors = [
  { name = "Cary Hawkins", email = "hawkinscary23@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Hatch",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]

dependencies = [
  "requests>=2.25.1",
  "pydantic>=1.8.2",
  "tomli>=2.0.1; python_version < '3.11'",
  "tomli-w>=0.5.0",
  "click>=8.0.0",
  "strands-agents>=1.0.0",
  "hatch",
  "hatchling>=1.27",
]

[project.urls]
Homepage = "https://github.com/hawkinscary/hatch-agent"
Source = "https://github.com/hawkinscary/hatch-agent"
Tracker = "https://github.com/hawkinscary/hatch-agent/issues"

[project.scripts]
"hatch-agent" = "hatch_agent.cli:cli"

[project.entry-points.hatch]
agent = "hatch_agent.hooks"

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=3.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/hatch_agent"]

[tool.hatch.envs.default]
python = "3.10"

[tool.hatch.envs.dev]
template = "default"
features = ["dev"]
description = "Developer environment: installs dev extras (pytest, etc.)"

[tool.hatch.envs.hatch-test]
extra-dependencies = [
  "pytest-cov>=3.0.0",
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13"]

[tool.pytest.ini_options]

# Markers for test categorization
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "llm: Tests that interact with LLM providers (mocked)",
    "filesystem: Tests that interact with filesystem",
    "network: Tests that require network access (should be mocked)",
]

[tool.coverage.run]
source = ["src/hatch_agent"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "class .*\\bProtocol\\):",
    "@overload",
]

[tool.coverage.html]
directory = "htmlcov"
